{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "Player",
            "id": "30a52a4d-f77d-48fa-833f-e137179b0df3",
            "actions": [
                {
                    "name": "MoveB",
                    "type": "Value",
                    "id": "e0c2e438-dfc9-4d62-ba26-0145c4c89b9e",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "48264719-618b-488f-b72f-b13158486fca",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MoveF",
                    "type": "Button",
                    "id": "72d22ceb-f758-48c7-a2ae-f054403fd3e4",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "5d04b687-d3b6-4bcb-ab8d-9b2161b2110b",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveB",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c6a66c51-e7eb-4184-9478-25c3cc0439b2",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7a0ee214-263d-474c-a3f8-1f0be8b2db55",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveF",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}